# Humamoid_robotic_book-2-

./: .env  DEPLOY.md  README.md  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
ai-book/: .gitignore  .npmignore  README.md  UI_ENHANCEMENTS.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
ai-book/.github/workflows/: deploy.yml
ai-book/docs/capstone/: chapter-51-capstone-project-overview.md  chapter-52-project-architecture-and-design.md  chapter-53-voice-command-integration.md  chapter-54-path-planning-and-navigation.md  chapter-55-obstacle-avoidance.md  chapter-56-object-identification-with-computer-vision.md  chapter-57-object-manipulation.md  chapter-58-system-integration-and-testing.md  chapter-59-deployment-to-simulation-and-hardware.md
ai-book/docs/getting-started/: chapter-1-introduction-to-physical-ai.md  chapter-2-why-physical-ai-matters.md  chapter-3-embodied-intelligence-fundamentals.md  chapter-4-humanoid-robotics-landscape.md  chapter-5-sensor-systems-overview.md
ai-book/docs/hardware/: chapter-46-understanding-hardware-requirements.md  chapter-47-the-digital-twin-workstation.md  chapter-48-the-physical-ai-edge-kit.md  chapter-49-robot-hardware-options.md  (+1 more)
ai-book/docs/resources/: faq.md  (+4 more)
backend/: .env  QUICKSTART.md  agent.py  api.py  check_keys.py  debug_scraping.py  main.py  pyproject.toml  requirements.txt  retrieving.py  run_embedding.bat  run_embedding.sh  test_env.py
specs/1-physical-ai-book/: plan.md  spec.md  tasks.md
(+80 files in other folders)
